@@ -1,3 +1,5 @@
+* BUG#2067 Add a friendly user error when it is not possible to cancel an endorsement
+
 Version 1.14 - 2017-11-09
 * BUG#385 Block the ability to delete an endorsement if it has been applied
 * BUG#6003 Override contract option version if its effective date is the same as the previous contract option version
